<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    tools:context=".SchoolSelectionActivity">

    <!-- 소속을 선택해주세요. -->
    <TextView
        android:id="@+id/tv_select_school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_school"
        android:textAppearance="@style/SelectSchoolText"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/view_elementary_school" />


    <!-- 초등학생 -->
    <View
        android:id="@+id/view_elementary_school"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:background="@drawable/elementary_school_background"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_select_school"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_elementary_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elementary_student"
        android:textAppearance="@style/StudentText"
        app:layout_constraintTop_toTopOf="@+id/view_elementary_school"
        app:layout_constraintBottom_toBottomOf="@+id/view_elementary_school"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <!-- 중학생 -->
    <View
        android:id="@+id/view_middle_school"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:background="@drawable/middle_school_background"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/view_elementary_school"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_middle_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/middle_student"
        android:textAppearance="@style/StudentText"
        app:layout_constraintTop_toTopOf="@+id/view_middle_school"
        app:layout_constraintBottom_toBottomOf="@+id/view_middle_school"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <!-- 고등학생 -->
    <View
        android:id="@+id/view_high_school"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:background="@drawable/high_school_background"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/view_middle_school"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_high_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_student"
        android:textAppearance="@style/StudentText"
        app:layout_constraintTop_toTopOf="@+id/view_high_school"
        app:layout_constraintBottom_toBottomOf="@+id/view_high_school"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

