<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/start_page"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    android:background="@drawable/background_start_page"
    >

    <!-- 느끼는 음악교과서 -->
    <TextView
        android:id="@+id/textView_feeling_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.44"
        android:text="@string/textView_feeling_music"
        android:textAppearance="@style/textView_feeling_music"
        />

    <!-- 매너로디 -->
    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textView_feeling_music"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout_touch_and_ellipse"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.5"
        android:text="@string/textView_title"
        android:textAppearance="@style/textView_title"
        />

    <LinearLayout
        android:id="@+id/linear_layout_touch_and_ellipse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.7"
        >

        <!-- Touch -->
        <TextView
            android:id="@+id/textView_touch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_touch"
            android:layout_marginTop="65dp"
            android:textAppearance="@style/textView_touch"
            />

        <!-- Ellipse 1 -->
        <View
            android:id="@+id/view_ellipse_1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/ellipse_1"
            />
    </LinearLayout>

    <include
        android:id="@+id/school_selection_layout"
        layout="@layout/school_selection_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>
